# LibBSE

./: CMakeLists.txt  README.md
RI_coeff_k_debug/: RI_coeff_k_real_rank_0_fhi_aims.txt  RI_coeff_k_real_rank_10_fhi_aims.txt  RI_coeff_k_real_rank_11_fhi_aims.txt  RI_coeff_k_real_rank_12_fhi_aims.txt  RI_coeff_k_real_rank_14_fhi_aims.txt  RI_coeff_k_real_rank_15_fhi_aims.txt  RI_coeff_k_real_rank_16_fhi_aims.txt  RI_coeff_k_real_rank_18_fhi_aims.txt  RI_coeff_k_real_rank_19_fhi_aims.txt  RI_coeff_k_real_rank_20_fhi_aims.txt  RI_coeff_k_real_rank_22_fhi_aims.txt  RI_coeff_k_real_rank_23_fhi_aims.txt  RI_coeff_k_real_rank_24_fhi_aims.txt  RI_coeff_k_real_rank_26_fhi_aims.txt  RI_coeff_k_real_rank_27_fhi_aims.txt  RI_coeff_k_real_rank_28_fhi_aims.txt  RI_coeff_k_real_rank_2_fhi_aims.txt  RI_coeff_k_real_rank_30_fhi_aims.txt  RI_coeff_k_real_rank_31_fhi_aims.txt  RI_coeff_k_real_rank_3_fhi_aims.txt  RI_coeff_k_real_rank_4_fhi_aims.txt  RI_coeff_k_real_rank_6_fhi_aims.txt  RI_coeff_k_real_rank_7_fhi_aims.txt  RI_coeff_k_real_rank_8_fhi_aims.txt
doc/: README.md
driver/: main.cpp
include/io/: LibBSE_io.hpp
include/mpi/: LibBSE_mpi.h
src/RI/: Chi_0.cpp  Chi_0.h  LibBSE_Chi_0.cpp  LibBSE_Chi_0.h  LibBSE_RI_M.cpp  LibBSE_RI_M.h  LibBSE_RI_coeff.cpp  LibBSE_RI_coeff.h
src/interface/: Blas_Fortran.h  Blas_Interface.h
src/io/: LibBSE_io.cpp  LibBSE_io.hpp  Read_aims_output.cpp  Read_aims_output.h
src/math/: Matrix.h  Tensor.h
src/mpi/: LibBSE_mpi.cpp  LibBSE_mpi.h
tools/: compare_ri_coeff_debug.py
